[package]
authors = ["Henrik AlseÌr <henrik.alser@me.com>"]
name = "f429-embassy"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7.1"
defmt = "0.3"
defmt-rtt = "0.3"
embedded-hal = { version = "=1.0.0-alpha.8" }
embassy = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy",  features = ["defmt", "defmt-timestamp-uptime", "nightly", "unstable-traits"] }
embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy",  features = ["nightly", "unstable-traits", "defmt", "stm32f429zi", "unstable-pac", "memory-x", "time-driver-any", "exti", "usb-otg"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = "0.7.8"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
embedded-hal-async = { version = "0.1.0-alpha.0" }

[patch.crates-io]
embedded-hal-async = { git = "https://github.com/rust-embedded/embedded-hal" }
embedded-hal = { git = "https://github.com/rust-embedded/embedded-hal" }

[features]
# set logging levels here

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }